chore: adding podman compatibility and fixing network